--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
     .container { text-align: center; z-index: 2; }
 
     /* Envelope */
@@ -35,7 +36,7 @@
       border-radius: 12px;
       animation: bounce 1.5s infinite;
       overflow: hidden;
-      display: none; /* will appear after click */
+      display: none;
     }
     .envelope:before {
       content: "";
@@ -63,78 +64,64 @@
     }
     @keyframes bounce { 0%,100%{transform:translateY(0);}50%{transform:translateY(-15px);} }
 
-    /* Popup */
-    .popup, .questions, .letter, .final, .end {
-      display: none;
-      font-size: 1.6rem;
-      margin-top: 20px;
-      animation: fadeInUp 0.8s ease-in-out;
-    }
-    @keyframes fadeInUp { from{opacity:0;transform:translateY(30px) scale(0.9);} to{opacity:1;transform:translateY(0) scale(1);} }
+    /* Popup and cards */
+    .popup, .questions, .letter, .final, .end { display: none; font-size:1.4rem; margin-top:20px; animation:fadeInUp 0.8s ease-in-out; }
+    @keyframes fadeInUp { from{opacity:0; transform:translateY(30px) scale(0.9);} to{opacity:1; transform:translateY(0) scale(1);} }
     .popup-card {
-      background: #cce7ff; /* light blue */
-      padding: 25px 40px;
-      border-radius: 25px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.15);
-      display: inline-block;
-      margin: 15px;
-      color: #004080;
-      font-weight: bold;
-      font-size: 1.8rem;
-      transform: scale(0.95);
-      transition: 0.3s;
+      background:#fff; padding:20px 35px; border-radius:25px;
+      box-shadow:0 5px 20px rgba(0,0,0,0.15); display:inline-block;
+      margin:15px; color:#ff4da6; font-weight:bold; font-size:1.6rem;
+      transform:scale(0.95); transition:0.3s; cursor:pointer;
     }
-    .popup-card:hover { transform: scale(1.05); }
+    .popup-card:hover { transform:scale(1.05); }
 
     .btn {
-      background: #ff4da6;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 30px;
-      border: none;
-      cursor: pointer;
-      margin: 12px;
-      font-size: 1.3rem;
-      transition: 0.3s;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+      background:#ff4da6; color:white; padding:15px 30px; border-radius:30px;
+      border:none; cursor:pointer; margin:12px; font-size:1.2rem; transition:0.3s;
+      box-shadow:0 3px 10px rgba(0,0,0,0.2);
     }
-    .btn:hover { background: #e60073; }
+    .btn:hover { background:#e60073; }
 
-    /* Floating Hearts */
-    .heart { position: fixed; font-size: 2rem; animation: float linear infinite; z-index: 1; }
+    /* Hearts and sparkles */
+    .heart { position:fixed; font-size:2rem; animation:float linear infinite; z-index:1; }
     @keyframes float { from{transform:translateY(100vh) scale(0.8);opacity:1;} to{transform:translateY(-10vh) scale(1.6);opacity:0;} }
-
-    /* Sparkles */
-    .sparkle { position: fixed; width: 6px; height: 6px; background: white; border-radius: 50%; opacity: 0.7; animation: twinkle 2s infinite alternate; }
+    .sparkle { position:fixed; width:6px; height:6px; background:white; border-radius:50%; opacity:0.7; animation:twinkle 2s infinite alternate; }
     @keyframes twinkle { from{opacity:0.2;transform:scale(0.8);} to{opacity:1;transform:scale(1.4);} }
 
+    /* Overlay for intro click */
+    #introOverlay { position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer; z-index:3; }
   </style>
 </head>
 <body>
   <div class="container">
 
-    <!-- Step 0: First popup visible immediately -->
-    <div id="introFirst" class="popup" style="display:block;">
+    <!-- Step 0: Intro -->
+    <div id="intro" class="popup" style="display:block;">
+      <div id="introOverlay"></div>
       <div class="popup-card">
         Haaiiiii my babieeee 😘💖<br><br>
         I have a little secret for you…<br>
         Something cute, something silly, and something just for YOU mere budheeee!<br><br>
-        Today is a very special day… shhh 🤫💞<br>
+        Today is a very special day… but shhh 🤫💞<br>
         I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahu 🥰💖<br>
-        You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷
+        You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷<br>
+        Are you ready for a tiny magical surprise? 💌✨<br><br>
+        Click anywhere to see it! 💖💖
       </div>
     </div>
 
-    <!-- Envelope (appears after clicking anywhere) -->
+    <!-- Step 1: Envelope -->
     <div id="envelope" class="envelope">
       <div class="seal">💖</div>
     </div>
 
-    <!-- Popup sequence after envelope click -->
+    <!-- Step 2: Popups -->
     <div id="popup"></div>
+
+    <!-- Step 3: Questions -->
     <div id="questions"></div>
 
-    <!-- Letter -->
+    <!-- Step 4: Letter -->
     <div class="letter" id="letter">
       <p>
         Happy Boyfriend Day, my love 😚💕. I still can’t believe how lucky I am to have you!!!!!
@@ -147,7 +134,7 @@
       <button class="btn" onclick="showFinal()">Next ➡️</button>
     </div>
 
-    <!-- Final question -->
+    <!-- Step 5: Final -->
     <div class="final" id="final">
       <p>💍 Will you be my one and only, forever and ever? 💖</p>
       <button class="btn" onclick="showEnd()">Yes, foreverrr 😘</button>
@@ -155,18 +142,20 @@
       <button class="btn" onclick="showEnd()">No escape, I’m stuck with you 😏😈</button>
     </div>
 
-    <!-- End message -->
+    <!-- Step 6: End -->
     <div class="end" id="end">
       <h2>🌸 Happy Boyfriend Day, my love 💕✨</h2>
       <h3>Daddy lobes you endlessly 😘💖</h3>
-      <p style="margin-top:10px; font-size:1.3rem; color:#004080;">
+      <p style="margin-top:10px; font-size:1.2rem; color:#ff4da6;">
         Thank you for being my cutest, funniest, and most loving Sahu! ♾️💖
       </p>
     </div>
+
   </div>
 
   <script>
-    const introFirst = document.getElementById("introFirst");
+    const intro = document.getElementById("intro");
+    const introOverlay = document.getElementById("introOverlay");
     const envelope = document.getElementById("envelope");
     const popup = document.getElementById("popup");
     const questions = document.getElementById("questions");
@@ -174,15 +163,13 @@
     const finalStep = document.getElementById("final");
     const end = document.getElementById("end");
 
-    const introMessages = [
-      "Click anywhere to start the surprise! 💖✨",
-      "Guess what today is? 🤔🎉",
+    const surpriseText = "Guess what today is? 🤔🎉";
+    const popupTexts = [
       "IT'S DA BOYFRIENDS DAYYYY YAYYYYY!!!!! 😈😛",
       "Happy Boyfriend Dayyy TO MY BOYFIEEEEE!!!! 💕",
       "You’re the best thing ever happened to me 💐",
       "I lobe you endlessly, Sahu meri babygorl 😚"
     ];
-
     const questionsTexts = [
       "Do you know you’re the most perfect boyfriend ever? 🥰",
       "Will you let me be your annoying baddie forever? 😏😛",
@@ -190,26 +177,30 @@
       "Can I keep you forever and ever? 💖"
     ];
 
-    let msgIndex = 0;
+    let popupIndex = 0;
     let questionIndex = 0;
 
-    // Step 0: Click anywhere on first popup to show envelope
-    introFirst.onclick = () => {
+    // Intro click
+    introOverlay.onclick = () => {
+      intro.style.display = "none";
       envelope.style.display = "block";
+      createHearts();
     };
 
     // Envelope click
     envelope.onclick = () => {
       envelope.style.display = "none";
-      showMessagesSequence();
+      popup.innerHTML = `<div class="popup-card">${surpriseText}</div>`;
+      popup.style.display = "block";
+      setTimeout(showPopups, 2500);
     };
 
-    function showMessagesSequence() {
-      if(msgIndex < introMessages.length) {
-        popup.innerHTML = `<div class="popup-card">${introMessages[msgIndex]}</div>`;
+    function showPopups() {
+      if (popupIndex < popupTexts.length) {
+        popup.innerHTML = `<div class="popup-card">${popupTexts[popupIndex]}</div>`;
         popup.style.display = "block";
-        msgIndex++;
-        setTimeout(showMessagesSequence, 2500);
+        popupIndex++;
+        setTimeout(showPopups, 2000);
       } else {
         popup.style.display = "none";
         showQuestions();
@@ -219,8 +210,7 @@
     function showQuestions() {
       if (questionIndex < questionsTexts.length) {
         questions.innerHTML = `
-          <div class="popup-card">${questionsTexts[questionIndex]}</div>
-          <br>
+          <div class="popup-card">${questionsTexts[questionIndex]}</div><br>
           <button class="btn" onclick="nextQuestion()">Yes 💖</button>
         `;
         questions.style.display = "block";
@@ -248,4 +238,30 @@
     }
 
     function createHearts() {
-      const colors = ["💖","😋","
+      const colors = ["💖","😋","😘","💕"];
+      setInterval(() => {
+        const heart = document.createElement("div");
+        heart.classList.add("heart");
+        heart.innerHTML = colors[Math.floor(Math.random() * colors.length)];
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.fontSize = (Math.random() * 2 + 2) + "rem";
+        heart.style.animationDuration = (Math.random() * 5 + 3) + "s";
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), 7000);
+      }, 150);
+    }
+
+    function createSparkles() {
+      setInterval(() => {
+        const sparkle = document.createElement("div");
+        sparkle.classList.add("sparkle");
+        sparkle.style.left = Math.random() * 100 + "vw";
+        sparkle.style.top = Math.random() * 100 + "vh";
+        sparkle.style.animationDuration = (Math.random() * 2 + 1) + "s";
+        document.body.appendChild(sparkle);
+        setTimeout(() => sparkle.remove(), 4000);
+      }, 300);
+    }
+  </script>
+</body>
+  </html>
