--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
       <div id="introOverlay"></div>
       <div class="popup-card">
         Haaiiiii my babieeee 😘💖<br><br>
-        I have a little secret for you…<br>
+        I have a little secret for you 🥸…<br>
         Something cute, something silly, and something just for YOU mere budheeee!<br><br>
-        Today is a very special day… but shhh 🤫💞<br>
-        I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahu 🥰💖<br>
+        Today is a very special day yk yk … but shhh 🤫💞<br>
+        I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahuuuuuu 🥰💖<br>
         You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷<br>
+        but today i wanted to make you feel how special you are to me 
+        although that cannot be described in words so here i am anyways<br>
         Are you ready for a tiny magical surprise? 💌✨<br><br>
-        Click anywhere to see it! 💖💖
+        Click anywhere to see it bhonduuuu! 💖💖
       </div>
     </div>
 
