--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         Today is a very special day yk yk … but shhh 🤫💞<br>
         I’ve been planning this little surprise for my most handsome, cutest, and perfect Sahuuuuuu 🥰💖<br>
         You make me laugh, smile, and feel warm and loved inside, even from miles away 🥹🩷<br>
-        but today i wanted to make you feel how special you are to me 
-        although that cannot be described in words so here i am anyways<br>
-        Are you ready for a tiny magical surprise? 💌✨<br><br>
-        Click anywhere to see it bhonduuuu! 💖💖
+        So today i wanted to make you feel how special you are to me too
+        although that cannot be described in words but here i am anyways<br>
+        Are you ready for a tiny surprise ? 💌✨<br><br>
+       so nowwwww all you gotta do is ..... Click.... YESH .... CLICK anywhere to start with your surprise bhonduuuu! 💖💖
       </div>
     </div>
 
@@ -126,10 +126,11 @@
     <!-- Step 4: Letter -->
     <div class="letter" id="letter">
       <p>
-        Happy Boyfriend Day, my love 😚💕. I still can’t believe how lucky I am to have you!!!!!
+        Happy Boyfriend Day, my love my cutieee turu lobe my one & only best purush😚💕. I still can’t believe how lucky I am to have you , it feels like a dream !!!!!
         From the day we met, you’ve been nothing but love, care, and happiness for me omggggg i lobeeee you so muchh meree sabseee pyareeeee cuteee bhonduuuuiuuu i lobe you i lobe youuuuuu !!!
-        You’re my comfort, my safe place, and my biggest blessing frrr!   
-        Even from miles apart, you make me feel closer than ever.   
+        You’re my comfort, my safe place, and my biggest blessing frrr!  am so soo sooooo grateful for having such a great and genuine man as my wife 🤗✨.
+        Even from miles apart, you make me feel closer than ever. You're actually so good not only good as a wife but aise bhi like you're such a nice person! 
+        you don't have any bad qualities ( except poor communication skilss lmao ) you never do anything which is actually ( ghatiya ) you're kind and always stands on your morals , you're DA PERFECT GUY! 
         I want you to know that I’m so proud to call you mine and I’ll love you more and more every single day cause you deserve everything mere budhe!!!!   
         Thank you for being the sweetest boyfriend in the world , you are my forever ♾️💕   
       </p>
