--- a/index.html
+++ b/index.html
@@ -125,14 +125,20 @@
 
     <!-- Step 4: Letter -->
     <div class="letter" id="letter">
-      <p>
-        Happy Boyfriend Day, my love my cutieee turu lobe my one & only best purush😚💕. I still can’t believe how lucky I am to have you , it feels like a dream !!!!!
-        From the day we met, you’ve been nothing but love, care, and happiness for me omggggg i lobeeee you so muchh meree sabseee pyareeeee cuteee bhonduuuuiuuu i lobe you i lobe youuuuuu !!!
-        You’re my comfort, my safe place, and my biggest blessing frrr!  am so soo sooooo grateful for having such a great and genuine man as my wife 🤗✨.
-        Even from miles apart, you make me feel closer than ever. You're actually so good not only good as a wife but aise bhi like you're such a nice person! 
-        you don't have any bad qualities ( except poor communication skilss lmao ) you never do anything which is actually ( ghatiya ) you're kind and always stands on your morals , you're DA PERFECT GUY! 
-        I want you to know that I’m so proud to call you mine and I’ll love you more and more every single day cause you deserve everything mere budhe!!!!   
-        Thank you for being the sweetest boyfriend in the world , you are my forever ♾️💕   
+      <p> 
+       Happy Boyfriend Dayyyyyyy !!!!!!! my love, my cutieee turu lobe, my one & only best purush! 🥰💖 
+       I still can’t believe how insanely lucky I am to have you 🫠🩷 , 
+       it honestly feels like I’m living in the sweetest dream ever! ✨
+       From the very day we met, you’ve been nothing but love, care, and pure happiness for me omgggg I lobeeee you so muchh, mere sabseee pyareeeee, cuteee, bhonduuuuiuuu! I lobe you, I lobe youuuuuu endlessly!!! 💕💞
+       You’re my comfort, my safe place, my biggest blessing frrr! I’m sooo sooo sooooo grateful to have such a genuine, kind-hearted, and unbelievably amazing man in my life. 
+       Even if we’re miles apart, you always make me feel so close to you 🫂🩷 .
+       You’re not just my mommyyyyy ! you’re my everything 😾💐 .
+       YOU'RE NOT ONLY A GREAT WIFE BUT ALSO A GREAT HOOMAN ( BANDAR ) 
+       like :- You’re gyani , funny, caring, ridiculously handsome, and just the most perfect human being I’ve ever known FRRRRRR. 
+       Honestly, you don’t have any bad qualities (okay, maybe your poor communication skills sometimes, lmao 😛) but that can be fixed with time ehe !
+       You never do/did ( never even in the past ) anything bekar or ghatiya, and you always stand by your morals ( like literally a saint , my perfect lugai ) . You’re the PERFECT guy in every possible way, and I’m sooo proud to call you mine 🥹💖 . 
+       I promise to love you more and more every single day because you deserve all the happiness, love, and cuddles in the world, mere budhe!
+       Thank you for being the sweetest, most caring, and most loving boyfriend in the entire universe , you truly are my forever 🌙💞✨ .    
       </p>
       <button class="btn" onclick="showFinal()">Next ➡️</button>
     </div>
@@ -147,7 +153,7 @@
 
     <!-- Step 6: End -->
     <div class="end" id="end">
-      <h2>🌸 Happy Boyfriend Day, my love 💕✨</h2>
+      <h2>🌸 I KNEWW IT 😈🙏🏿 EHEHEHEHE once again Happy Boyfriend Day, my love 💕✨</h2>
       <h3>Daddy lobes you endlessly 😘💖</h3>
       <p style="margin-top:10px; font-size:1.2rem; color:#ff4da6;">
         Thank you for being my cutest, funniest, and most loving Sahu! ♾️💖
