--- a/index.html
+++ b/index.html
@@ -90,6 +90,32 @@
 
     /* Overlay for intro click */
     #introOverlay { position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer; z-index:3; }
+
+    /* Make the intro smaller */
+    #intro .popup-card {
+      font-size: 1rem;
+      max-width: 80vw;
+      max-height: 75vh;
+      overflow-y: auto;
+      text-align: left;
+      line-height: 1.4;
+      padding: 15px 20px;
+    }
+
+    /* Letter smaller */
+    .letter p {
+      font-size: 1.2rem;
+      max-width: 90%;
+      max-height: 75vh;
+      overflow-y: auto;
+      line-height: 1.5;
+      text-align: left;
+      margin: 20px auto;
+      padding: 15px 20px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 20px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -133,9 +159,9 @@
        You’re my comfort, my safe place, my biggest blessing frrr! I’m sooo sooo sooooo grateful to have such a genuine, kind-hearted, and unbelievably amazing man in my life. 
        Even if we’re miles apart, you always make me feel so close to you 🫂🩷 .
        You’re not just my mommyyyyy ! you’re my everything 😾💐 .
-       YOU'RE NOT ONLY A GREAT WIFE BUT ALSO A GREAT HOOMAN ( BANDAR ) 
+       YOU'RE NOT ONLY A GREAT WIFE BUT ALSO A GREAT HOOMAN ( my bhondu BANDAR ) 
        like :- You’re gyani , funny, caring, ridiculously handsome, and just the most perfect human being I’ve ever known FRRRRRR. 
-       Honestly, you don’t have any bad qualities (okay, maybe your poor communication skills sometimes, lmao 😛) but that can be fixed with time ehe !
+       Honestly, you don’t have any bad qualities (okay, maybe your poor communication skills sometimes, lmao 😛) but that can be fixed ehe !
        You never do/did ( never even in the past ) anything bekar or ghatiya, and you always stand by your morals ( like literally a saint , my perfect lugai ) . You’re the PERFECT guy in every possible way, and I’m sooo proud to call you mine 🥹💖 . 
        I promise to love you more and more every single day because you deserve all the happiness, love, and cuddles in the world, mere budhe!
        Thank you for being the sweetest, most caring, and most loving boyfriend in the entire universe , you truly are my forever 🌙💞✨ .    
@@ -154,7 +180,7 @@
     <!-- Step 6: End -->
     <div class="end" id="end">
       <h2>🌸 I KNEWW IT 😈🙏🏿 EHEHEHEHE once again Happy Boyfriend Day, my love 💕✨</h2>
-      <h3>Daddy lobes you endlessly 😘💖</h3>
+      <h3>Daddy lobes you endlesslyyyy 😘💖</h3>
       <p style="margin-top:10px; font-size:1.2rem; color:#ff4da6;">
         Thank you for being my cutest, funniest, and most loving Sahu! ♾️💖
       </p>
